# rag_embeddings

./: .env-example  .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  rag_embeddings.gemspec
.bundle/: config
ext/rag_embeddings/: Cargo.toml  build.rb  embedding.bundle  embedding.c  embedding.rs  embedding_config.h  extconf.rb
ext/rag_embeddings/embedding.bundle.dSYM/Contents/: Info.plist
ext/rag_embeddings/embedding.bundle.dSYM/Contents/Resources/DWARF/: embedding.bundle
ext/rag_embeddings/embedding.bundle.dSYM/Contents/Resources/Relocations/aarch64/: embedding.bundle.yml
lib/: rag_embeddings.rb
lib/rag_embeddings/: config.rb  database.rb  engine.rb  version.rb
spec/: performance_spec.rb  rag_embeddings_spec.rb  spec_helper.rb
spec/fixtures/: text1_embeddings.json  text2_embeddings.json
