[package]
name = "embedding"
version = "0.3.0"
edition = "2024"
authors = ["Marco Mastrodonato <m.mastrodonato@gmail.com>"]
description = "Fast embedding operations for Ruby using Rust"
license = "MIT"
repository = "https://github.com/marcomd/rag_embeddings"

[lib]
crate-type = ["cdylib"]
path = "embedding.rs"

[dependencies]
magnus = "0.7"

# Optional: for better performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"